# stark

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMPILER-STATE.md  LICENSE  README.md  STARK_Analysis_and_Discussion.md  stark-spec-parity-roadmap.md
stark-time/native/: Cargo.toml  README.md
stark-time/native/src/: lib.rs
starkc/: Cargo.toml  README.md  cmp3.stark
starkc/docs/: CLAUDE_GATE5_IMPLEMENTATION_PLAN.md  GEMINI_GATE4_COMPLETION_PLAN.md  GEMINI_GATE4_IMPLEMENTATION.md  PHASE4E_MATH_RANDOM_IO_IMPLEMENTATION.md  PHASE8_GRAMMAR_GAPS.md  STARK-BASE64-GEMINI-WORK-PACKAGE.md  VSCODE_EXTENSION_PLAN.md  WP-C6-ENTRY.md  WP8_1_LSP_IMPLEMENTATION.md  WP8_2_FORMATTER_IMPLEMENTATION.md  WP8_3_TEST_FRAMEWORK_IMPLEMENTATION.md  WP8_4_VSCODE_EXTENSION_IMPLEMENTATION.md  WP8_5_DOC_GENERATOR_IMPLEMENTATION.md  gate1-exit.md  gate2-exit.md  gate3-exit.md  gate4-design.md  gate4-exit.md  gate5-backend-decision.md  gate5-design.md  gate5-exit.md  gate6-memo.md  gate7-decision.md  results.json  results_summary.md  terminal-ide.md
starkc/docs/compiler/: C0-exit-report.md  C1-exit-report.md  C2-exit-report.md  C3-entry-exit.md  C5-exit-report.md  diagnostic-transport.md
starkc/docs/conformance/: KNOWN-DEVIATIONS.md
starkc/docs/dev/: compiler-map.md
starkc/examples/: c46_probe.rs  oracle_run.rs
starkc/examples/gate3/: 01_hello.stark  02_control_flow.stark  03_aggregates.stark  04_try.stark  05_core_min.stark  06_methods.stark  07_drop_order.stark
starkc/examples/gate4/: artifact_declaration_drift.stark  bad_device.stark  bad_dtype.stark  bad_shape.stark  reference_resnet50.stark  valid_pipeline.stark
starkc/examples/gate5/: artifact_drift.stark  bad_device.stark  bad_dtype.stark  bad_shape.stark  valid_pipeline.stark
starkc/examples/gate7/: README.md  fetch-artifacts.py  model.stark  range_pipeline.stark  valid_pipeline.stark
starkc/scripts/: build-release.py  check-conformance.py  conformance_lib.py  generate-conformance-report.py  run-gate5-evaluation.py  run-gate7-evaluation.py  test_build_release.py
starkc/src/: analysis.rs  ast.rs  ast_dump.rs  borrowck.rs  diag.rs  flow.rs  hir.rs  interp.rs  layout.rs  lexer.rs  lib.rs  literal.rs  main.rs  native_build.rs  native_toolchain.rs  options.rs  package.rs  parser.rs  resolve.rs  source.rs  typecheck.rs
starkc/src/analysis/: query.rs
starkc/src/backend/: mod.rs  provider_abi.rs  version.rs
starkc/src/deploy/: emit.rs  ir.rs  lower.rs  mod.rs
starkc/src/doc_gen/: extract.rs  highlight.rs  html.rs  markdown.rs  mod.rs  search.rs
starkc/src/extensions/: mod.rs
starkc/src/formatter/: comments.rs  mod.rs  precedence.rs  printer.rs
starkc/src/lsp/: mod.rs  protocol.rs  server.rs  state.rs
starkc/src/mir/: drop_plan.rs  interp.rs  lower.rs  mod.rs  verify.rs
starkc/src/onnx/: importer.rs  mod.rs  verifier.rs
starkc/src/test_runner/: mod.rs
starkc/stark-runtime/: Cargo.toml
starkc/stark-runtime/src/: lib.rs  output.rs  provider_abi.rs  slot.rs  string.rs  trap.rs  value.rs  version.rs
starkc/tests/: c61f_nested_refs.rs  c61f_reference_boundary.rs  c61f_structural_copy.rs  c62b_f1_privacy.rs  c62b_f2_specific_instance.rs  c62b_f5_impl_bounds.rs  c62b_f6_self_normalisation.rs  c62c_associated_types.rs  c62d_operator_coretrait.rs  c62e_deterministic_identity.rs  c63a_string.rs  canonical_float.rs  conformance.rs  conformance_report.rs  cross_package_generics.rs  diag_format.rs  diagnostic_transport.rs  doc_gen.rs  exec_snapshots.rs  formatter.rs  gate2_package.rs  gate2_valid.rs  gate3_execution.rs  gate3_package_resolution.rs  gate4_onnx.rs  gate4_semantics.rs  gate4_tensor.rs  gate4a_prelude_traits.rs  gate4b_string_vec.rs  gate4c_collections.rs  gate5_codegen.rs  gate5_defects.rs  gate5_emit.rs  gate5_lower.rs  gate5_semantic_gaps.rs  gate7_defects.rs  gate7_deploy.rs  gate7_frontend.rs  gate7_semantic.rs  lex_fixtures.rs  (+33 more)
starkc/tests/common/: mod.rs
starkc/tests/exec_snapshots/: c5_native__01_supported_completion.snap  c5_native__01_supported_completion.stark  c5_native__02_supported_overflow_trap.stark  collection_iter__01_vec_push_index_iterate.snap  collection_iter__01_vec_push_index_iterate.stark  collection_iter__02_hashmap_insert_get_iteration_order.snap  collection_iter__02_hashmap_insert_get_iteration_order.stark  collection_iter__03_slice_views_and_array_iteration.snap  collection_iter__03_slice_views_and_array_iteration.stark  expr_stmt__01_arithmetic_and_precedence.snap  (+40 more)
(+574 files in other folders)
