[package]
name = "starkc"
version = "0.1.0"
edition = "2021"
default-run = "starkc"
description = "Compiler for the STARK Core v1 language"
license = "MIT"
rust-version = "1.85"

[dependencies]
sha2 = { version = "0.11.0", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
