# Gate 7 (G7-06) — real typed-Rust comparator (an actual ONNX Runtime host).
# Same backend pins as the STARK-generated host, for a fair comparison.
[package]
name = "gate7-rust-comparator"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "gate7-rust-comparator"
path = "src/main.rs"

[dependencies]
ort = "=2.0.0-rc.12"
ndarray = "=0.17.2"
sha2 = "=0.10.9"

[profile.release]
opt-level = 3
